refactor: route browser mutations through workspace commands